# fnapi

./: .babelrc  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierignroe  Cargo.toml  README.md  cspell.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.github/workflows/: CI.yml  cancel.yml  cargo-lint.yml  cargo-test.yml  node-test.yml  publish.yml
crates/binding/: Cargo.toml
crates/binding/src/: cli.rs  lib.rs  util.rs
crates/fnapi/: Cargo.toml
crates/fnapi-api-def/: Cargo.toml
crates/fnapi-api-def/src/: lib.rs
crates/fnapi-api-def/src/types/: json_schema.rs  mod.rs
crates/fnapi-client-gen/: Cargo.toml
crates/fnapi-client-gen/src/: lib.rs
crates/fnapi-compiler/: Cargo.toml  build.rs  package.json  rollup.config.js  tsconfig.json
crates/fnapi-compiler/src/: lib.rs  target.rs
crates/fnapi-compiler/src/file_compiler/: import_analyzer.rs  magic_replacer.rs  mod.rs
crates/fnapi-compiler/src/project/: mod.rs
crates/fnapi-compiler/src/type_server/: index.ts  methods.ts  mod.rs  tests.rs
crates/fnapi-compiler/tests/: fixture.rs  project.rs
crates/fnapi-compiler/tests/errors/export-default-fn/1/: input.stderr  input.ts
crates/fnapi-compiler/tests/errors/no-return-type/: input.stderr  input.ts
crates/fnapi-compiler/tests/fixture/fnapi-ann/args/1/: apiDef.json  client.web.mjs  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/magic/context/get/1/: input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/magic/context/get/class/: input.ts
crates/fnapi-compiler/tests/fixture/magic/context/get/class/output/: client.web.mjs
crates/fnapi-compiler/tests/fixture/param-ann/query/.1/: input.ts
crates/fnapi-compiler/tests/fixture/param-types/pat/array/tuple-1/: input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/param-types/pat/array/tuple-alias-1/: apiDef.json  input.ts
crates/fnapi-compiler/tests/fixture/param-types/pat/object/1/: apiDef.json  client.node.mjs  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/param-types/pat/object/2-optional/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/param-types/types/intersection/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/param-types/types/union/1/: apiDef.json  client.web.mjs  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/param-types/types/union/1/output/: client.node.mjs
crates/fnapi-compiler/tests/fixture/return-types/alias/tuple/1/: input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/generic/interface/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/generic/interface/1/output/: client.node.mjs
crates/fnapi-compiler/tests/fixture/return-types/generic/tuple/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/imports/reexport-all/1/: input.ts  lib.ts  real.ts
crates/fnapi-compiler/tests/fixture/return-types/imports/simple/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/intersection/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/object/1/: input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/object/optional/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/object/optional/1/output/: client.web.mjs
crates/fnapi-compiler/tests/fixture/return-types/object/optional/2/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/tuple/1/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/tuple/2/: apiDef.json  client.node.mjs  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/tuple/3/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/union/: apiDef.json  input.ts  output.mjs
crates/fnapi-compiler/tests/fixture/return-types/union/output/: client.web.mjs
crates/fnapi-compiler/tests/projects/: .gitignore
crates/fnapi-compiler/tests/projects/.session/: tsconfig.json
crates/fnapi-compiler/tests/projects/.session/src/: todo.ts
crates/fnapi-compiler/tests/projects/.session/test/: simple.js
crates/fnapi-compiler/tests/projects/basic/1/: tsconfig.json
crates/fnapi-compiler/tests/projects/basic/1/src/: todo.ts
crates/fnapi-compiler/tests/projects/basic/1/test/: simple.js
crates/fnapi-compiler/tests/type_server/valid/: simple.ts
crates/fnapi-core/: Cargo.toml
crates/fnapi-core/src/: lib.rs
crates/fnapi-testing/: Cargo.toml
crates/fnapi-testing/src/: lib.rs  swc_handler.rs
crates/fnapi/examples/: cli.rs
crates/fnapi/src/: lib.rs  main.rs
crates/fnapi/src/commands/: build.rs  mod.rs  serve.rs
crates/module-storage/: Cargo.toml
crates/module-storage/src/: lib.rs  modules.rs
examples/: .gitignore
examples/next-app-example/: package-lock.json  package.json  tsconfig.json
examples/next-app-example/fnapi/: auth.ts  todo.ts
examples/next-app-example/pages/: _app.tsx  index.tsx
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
