[package]
edition = "2021"
license = "Apache-2.0"
name = "fnapi-api-def"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnapi-core = {path = "../fnapi-core"}
serde = {version = "1", features = ["derive", "rc"]}
serde_json = "1"
swc_atoms = "0.2.12"
swc_common = { version = "0.18.9", features = ["concurrent"] }
swc_ecma_ast = "0.79.0"
swc_ecma_utils = "0.86.2"
