[package]
edition = "2021"
license = "Apache-2.0"
name = "fnapi-client-gen"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fnapi-api-def = {path = "../fnapi-api-def"}
fnapi-core = {path = "../fnapi-core"}
once_cell = "1.9.0"
parking_lot = "0.12.0"
rayon = "1.5.1"
swc_atoms = "0.2.12"
swc_common = { version = "0.19.1", features = ["concurrent"] }
swc_ecma_ast = "0.80.0"
swc_ecma_codegen = "0.111.0"
swc_ecma_utils = "0.88.0"
