[package]
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "fnapi-compiler"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
auto_impl = "1.0.1"
fnapi-api-def = {path = "../fnapi-api-def"}
fnapi-core = {path = "../fnapi-core"}
hyper = {version = "0.14.19", features = ["tcp"]}
jsonrpc-client-transports = {version = "18.0.0", default-features = false, features = ["http"]}
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
module-storage = {version = "0.1.0", path = "../module-storage"}
once_cell = "1.9.0"
parking_lot = "0.12.0"
rand = "0.8.5"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
swc_atoms = "0.2.12"
swc_common = "0.18.9"
swc_ecma_transforms_base = "0.89.6"
swc_ecma_transforms_proposal = "0.112.0"
swc_ecma_transforms_typescript = "0.124.0"
swc_ecmascript = {version = "0.165.0", features = ["parser", "codegen", "utils", "visit"]}
swc_error_reporters = "0.2.0"
tokio = {version = "1.17.0", features = ["rt", "rt-multi-thread"]}
tracing = "0.1.32"

[dev-dependencies]
fnapi-client-gen = {path = "../fnapi-client-gen"}
fnapi-testing = {path = "../fnapi-testing"}
swc_ecma_transforms_testing = "0.91.0"
testing = "0.20.1"
