[package]
authors = ["fnapi developers <dev@fnapi.app>"]
description = "FnApi"
edition = "2021"
license = "Apache-2.0"
name = "fnapi-core"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
swc_common = {version = "0.18.9", features = ["concurrent"]}
