[package]
authors = ["fnapi developers <dev@fnapi.app>"]
description = "FnApi"
edition = "2021"
license = "Apache-2.0"
name = "fnapi-core"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
auto_impl = "1.0.1"
swc_common = { version = "0.19.1", features = ["concurrent"] }
