[package]
edition = "2021"
name = "fnapi-testing"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fnapi-core = {path = "../fnapi-core"}
parking_lot = "0.12.0"
swc_common = "0.18.9"
swc_error_reporters = "0.2.0"
testing = "0.20.1"
tokio = {version = "1.17.0", features = ["rt", "rt-multi-thread"]}
tracing = "0.1.32"
tracing-subscriber = {version = "0.3.9", features = ["fmt"]}
