[package]
authors = ["fnapi developers <dev@fnapi.app>"]
description = "FnApi"
edition = "2021"
license = "Apache-2.0"
name = "fnapi"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = {version = "3.1.3", features = ["derive"]}
fnapi-compiler = {path = "../fnapi-compiler"}
fnapi-core = {path = "../fnapi-core"}
swc_common = {version = "0.18.9", features = ["concurrent"]}
swc_error_reporters = "0.2.0"
tokio = {version = "1", features = ["macros"]}

[dev-dependencies]
fnapi-testing = {path = "../fnapi-testing"}
