[package]
edition = "2021"
license = "Apache-2.0"
name = "module-storage"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
dashmap = "5.2.0"
rayon = "1.5.1"
rustc-hash = "1.1.0"
swc_atoms = "0.2.12"
swc_common = { version = "0.19.1", features = ["concurrent"] }
swc_ecma_transforms_base = "0.92.0"
swc_ecmascript = { version = "0.169.0", features = ["parser", "codegen", "utils", "visit"] }
